removed redundant TreeNodeHelper.java in java 11 java 11 syntax